assets/scss/_variables.scss
// Typography

/* latin-ext */
@font-face {
  font-family: 'Overpass Mono';
  font-display: swap;
  font-style: normal;
  font-weight: 400;
  src: local('Overpass Mono Regular'), local('OverpassMono-Regular'), url(https://fonts.gstatic.com/s/overpassmono/v4/_Xmq-H86tzKDdAPa-KPQZ-AC1iG0tt21C35m6Q.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

/* latin */
@font-face {
  font-family: 'Overpass Mono';
  font-display: swap;
  font-style: normal;
  font-weight: 400;
  src: local('Overpass Mono Regular'), local('OverpassMono-Regular'), url(https://fonts.gstatic.com/s/overpassmono/v4/_Xmq-H86tzKDdAPa-KPQZ-AC1i-0tt21C34.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* latin-ext */
@font-face {
  font-family: 'Overpass Mono';
  font-display: swap;
  font-style: normal;
  font-weight: 700;
  src: local('Overpass Mono Bold'), local('OverpassMono-Bold'), url(https://fonts.gstatic.com/s/overpassmono/v4/_Xm3-H86tzKDdAPa-KPQZ-AC3pSRo_6XBlRc4EUk4A.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

/* latin */
@font-face {
  font-family: 'Overpass Mono';
  font-display: swap;
  font-style: normal;
  font-weight: 700;
  src: local('Overpass Mono Bold'), local('OverpassMono-Bold'), url(https://fonts.gstatic.com/s/overpassmono/v4/_Xm3-H86tzKDdAPa-KPQZ-AC3pSRo_CXBlRc4EU.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

$base-font-family: 'Overpass Mono', monospace;
$heading-font-family: $base-font-family;

// Font Sizes
$base-font-size: 1em;

// Line height
$base-line-height: 1.5;
$heading-line-height: 1.2;

// Other Sizes
$base-border-radius: .52em;
$base-spacing: $base-line-height * 1em;
$small-spacing: $base-spacing / 2;
$base-z-index: 0;

// Colors
$primary-color: #000;
$action-color: $primary-color;
$white-color: #fff;
$black-color: #000;
$blue-color: #0086B3;
$dark-gray-color: #333;
$medium-gray-color: #999;
$light-gray-color: #ccc;

// Font Colors
$base-font-color: #4b4b4b;

// Border
$base-border-color: $light-gray-color;
$base-border: 1px solid $base-border-color;

// Background Colors
$base-background-color: $white-color;
$secondary-background-color: tint($base-border-color, 80%);

// Forms
$form-box-shadow: inset 0 1px 3px rgba($black-color, 0.06);
$form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);

// Animations
$base-duration: 150ms;
$base-timing: ease;

